--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       <div class="sectionContainer1">
         <table id="table1">
           <thead> 
-          <tr><th>Name</th><th>Email</th></tr>
+          <tr><th>Website</th><th>Address</th></tr>
           </thead>
           <tbody>
-          <tr><td>Google</td><td>google.com</td></tr>
-          <tr><td>Yahoo</td><td>yahoo.com</td></tr>
+          <tr><td>Google</td><td>www.google.com</td></tr>
+          <tr><td>Yahoo</td><td>www.yahoo.com</td></tr>
         </tbody>
          </table>
     </div>
